[gd_scene load_steps=3 format=3 uid="uid://cy28ox4sbo1yn"]

[ext_resource type="Script" path="res://Scripts/UI/player_ui_controller.gd" id="1_xelxe"]
[ext_resource type="PackedScene" uid="uid://lim1cpifqsqm" path="res://Scenes/UI/level_weapons_list.tscn" id="2_varee"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xelxe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MidBotPanel" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="WeaponsList" parent="VBoxContainer/MidBotPanel" instance=ExtResource("2_varee")]
layout_mode = 2

[node name="BotPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[node name="Panel" type="Panel" parent="VBoxContainer/BotPanel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Actions" type="HBoxContainer" parent="VBoxContainer/BotPanel"]
layout_mode = 2

[node name="Move" type="VBoxContainer" parent="VBoxContainer/BotPanel/Actions"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/BotPanel/Actions/Move"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "1"

[node name="Label2" type="Label" parent="VBoxContainer/BotPanel/Actions/Move"]
layout_mode = 2
text = "Move"
horizontal_alignment = 1

[node name="Attack" type="VBoxContainer" parent="VBoxContainer/BotPanel/Actions"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/BotPanel/Actions/Attack"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "2"

[node name="Label2" type="Label" parent="VBoxContainer/BotPanel/Actions/Attack"]
layout_mode = 2
text = "Attack"
horizontal_alignment = 1

[node name="Skills" type="VBoxContainer" parent="VBoxContainer/BotPanel/Actions"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/BotPanel/Actions/Skills"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "3"

[node name="Label2" type="Label" parent="VBoxContainer/BotPanel/Actions/Skills"]
layout_mode = 2
text = "Skills"
horizontal_alignment = 1

[node name="Defence" type="VBoxContainer" parent="VBoxContainer/BotPanel/Actions"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/BotPanel/Actions/Defence"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "4"

[node name="Label" type="Label" parent="VBoxContainer/BotPanel/Actions/Defence"]
layout_mode = 2
text = "Def"
horizontal_alignment = 1

[node name="Wait" type="VBoxContainer" parent="VBoxContainer/BotPanel/Actions"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/BotPanel/Actions/Wait"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "X"

[node name="Label" type="Label" parent="VBoxContainer/BotPanel/Actions/Wait"]
layout_mode = 2
text = "Wait"
horizontal_alignment = 1

[node name="Cancel" type="VBoxContainer" parent="VBoxContainer/BotPanel/Actions"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/BotPanel/Actions/Cancel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "C"

[node name="Label3" type="Label" parent="VBoxContainer/BotPanel/Actions/Cancel"]
layout_mode = 2
text = "Cancel"
horizontal_alignment = 1

[node name="Panel2" type="Panel" parent="VBoxContainer/BotPanel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/BotPanel/Actions/Move/Button" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BotPanel/Actions/Attack/Button" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BotPanel/Actions/Skills/Button" to="." method="_on_skills_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BotPanel/Actions/Defence/Button" to="." method="_on_def_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BotPanel/Actions/Wait/Button" to="." method="_on_wait_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BotPanel/Actions/Cancel/Button" to="." method="_on_cancel_button_pressed"]
